--- a/DTM/DTM/Properties/Resources.resx
+++ b/DTM/DTM/Properties/Resources.resx
@@ -211,4 +211,7 @@
   <data name="withtextwrapping_bottomcenter_32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\withtextwrapping_bottomcenter_32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="bonote_16x16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bonote_16x16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
